--- a/website/css/style.css
+++ b/website/css/style.css
@@ -106,7 +106,6 @@ section{
     background: url(../images/download.jpg) no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
 }
 
 .footer .box-container{
@@ -122,7 +121,7 @@ section{
 .footer .box-container .box a {
     color: var(--light-bg);
     font-size: 1.5rem;
-    padding-bottom: 1rem;
+    padding-bottom: 1.5rem;
     display: block;
 }
 .footer .box-container .box a i{
@@ -135,6 +134,29 @@ section{
     padding-right: 2rem;
 
 }
+
+.footer .credit{
+    text-align: center ;
+    padding-top: 3rem;
+    margin-top: 3rem;
+    border-top: .1rem solid var(--light-white);
+    font-size: 2rem;
+    color:var(--white);
+}
+.footer .credit span{
+    color:var(--main-color);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
