--- a/website/css/style.css
+++ b/website/css/style.css
@@ -38,6 +38,40 @@ html::-webkit-scrollbar-thumb {
 section{
     padding : 5rem 10%;
 }
+@keyframes fadeIn{
+    0%{
+        transform: scale(.5);
+        opacity: 0;
+    }
+}
+
+
+
+/* home modify */
+.btn{
+    display: inline-block;
+    background: var(--black);
+    margin-top: 1rem;
+    color:var(--white);
+    font-size: 1.7rem;
+    padding: 1rem 3rem;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background: var(--main-color);
+}
+
+/* courses font */
+.heading-title{
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: #777;
+}
+
+
 .header{
     position: sticky;
     top:0;
@@ -71,6 +105,84 @@ section{
     display: none;
 }
 
+/* home modification */
+.home {
+    padding:0;
+}
+.home .slide{
+    text-align: center;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover !important;
+    background-position: center !important;
+    min-height: 60rem;
+}
+.home .slide .content{
+    width: 85rem;
+    display: none;
+}
+.home .swiper-slide-active .content{
+    display: inline-block;
+}
+
+.home .slide .content span{
+    display: block;
+    font-size: 2.4rem;
+    color: var(--light-white);
+    padding-bottom: 1rem;
+    animation:fadeIn .4s linear backwards .2s;
+}
+.home .slide .content h3{
+    font-size: 5vw;
+    color:var(--white);
+    text-transform: uppercase;
+    line-height: 1;
+    text-shadow: var(--text-shadow);
+    padding: 1rem 0;
+    animation: fadeIn .4s linear backwards .4s;
+}
+.home .slide .content .btn{
+    animation: fadeIn .4s linear backwards .6s;
+}/*
+.home .swiper-button-next,
+.home .swiper-button-prev{
+    top:inherit;
+    left:inherit;
+    bottom: 0;
+    right: 0;
+    height: 7rem;
+    width: 7rem;
+    background: var(--white);
+    color: var(--black);
+}
+.home .swiper-button-next:hover,
+.home .swiper-button-prev:hover{
+    background: var(--main-color);
+    color: var(--white);
+}
+.home .swiper-button-next:after,
+.home .swiper-button-prev:after{
+    font-size: 2rem;
+}
+.home .swiper-button-prev{
+    right: 7rem;
+}
+*/
+
+/* courses modify */
+.courses .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+    gap: 1.5rem;
+}
+.courses .box-container .box{
+    padding: 3rem 2rem;
+    text-align: center;
+    background: var(--light-black);
+    cursor: pointer;
+}
 
 
 
@@ -79,18 +191,46 @@ section{
 
 
 
+.courses .box-container .box:hover{
+    background: var(--main-color);
+}
+.courses .box-container .box img{
+    height: 8rem;
+}
+
+.courses .box-container .box h3{
+    color: var(--light-bg);
+    font-size: 2rem;
+    padding: 1rem;
+}
 
 
-
-
-
-
-
-
-
-
-
-
+.home-about{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.home-about .image{
+    flex:1 1 41rem;
+}
+.home-about .image img{
+    width: 100%;
+}
+.home-about .content{
+    flex: 1 1 41rem;
+    padding: 3rem;
+    background: var(--light-bg);
+}
+.home-about .content h3{
+    font-size: 3rem;
+    color: var(--black);
+}
+.home-about .content p{
+    font-size: 1.5rem;
+    padding: 1rem;
+    line-height: 2;
+    color: var(--black);
+}
 
 
 
@@ -175,6 +315,9 @@ section{
     section{
         padding: 3rem 2rem;
     }
+    .home .slide .content h3{
+        font-size: 10vw ;
+    }
 }
 
 
@@ -212,4 +355,7 @@ section{
     html{
         font-size: 50%;
     }
+        .heading-title{
+            font-size: 3.5rem;
+        }
 }
